--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow: auto;
 }
 
 ul {
@@ -48,7 +48,7 @@ div.desc {
 }
 
 .signup button{
-    background-color: #1a5fc0;
+    background-color: #3882F6;
     color: aliceblue;
     padding: 12px 32px;
     border-radius: 12px;
@@ -71,10 +71,44 @@ div.desc {
     align-items: center;
     color: #E5E7EB;
     height: 60px;
+    flex-shrink: 0;
     margin: 16px 0;
 }
 
 a {
     text-decoration: none;
     color: #E5E7EB;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items:flex-start;
+    margin-bottom: 100px;
+}
+
+.card {
+    display: flex;
+    flex: 0 1 auto;
+    padding: 60px 60px;
+    border: solid #3882F6 3px;
+    border-radius: 12px;
+    max-width: 60px;
+    margin: auto;
+}
+
+.card-view {
+    text-align: center;
+}
+
+.card-title {
+    margin: 70px;
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
+}
+
+.text {
+    margin: 16px;
+    max-width: 200px;
 }
