Add 3rd section which is quote (Structure)

--- a/style.css
+++ b/style.css
@@ -112,3 +112,9 @@ a {
     margin: 16px;
     max-width: 200px;
 }
+
+.quote {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+}
