Add CSS into 4th section CTA

--- a/style.css
+++ b/style.css
@@ -134,3 +134,49 @@ a {
     align-self: flex-end;
     margin-top: 32px;
 }
+
+.cta {
+    align-content: center;
+    justify-content: center;
+}
+
+.cta-container {
+    background-color:#3882F6;
+    margin: 180px 420px;
+    padding: 45px 128px;
+    border-radius: 12px;
+    display: flex;
+    justify-content: space-between;
+    max-width: 800px;
+    min-width: 400px;
+}
+
+.cta-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #E5E7EB;
+}
+
+.cta-right {
+    padding: 12px 32px;
+}
+
+.button-footer {
+    border-radius: 12px;
+    padding: 5px 32px;
+    color: #E5E7EB;
+    font-weight: 800;
+    border: solid white 2px;
+    background-color: #3882F6;
+    
+}
+
+.cta-title {
+    font-weight: 1000;
+    font-size: 24px;
+}
+
+.cta-desc {
+    font-style: italic;
+}
