--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ div.desc {
     padding: 12px 32px;
     border-radius: 12px;
     font-weight: bold;
+    transition: 0.2s linear;
 }
 
 .header, .footer {
@@ -169,7 +170,11 @@ a {
     font-weight: 800;
     border: solid white 2px;
     background-color: #3882F6;
-    
+    transition: 0.25s linear;  
+}
+
+button:hover {
+    background-color: #1d488f; 
 }
 
 .cta-title {
